<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Omedia</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="login_auth_failed">用户名或密码错误</string>
    <string name="software_need_update">Omedia客户端需要升级，是否现在下载?</string>
    <string name="download_now">现在下载</string>
    <string name="download_later">以后下载</string>
    <string name="server_error">服务器错误</string>
    <string name="token_wrong">token错误，请重新登陆</string>
    <string name="error_conn_timeout">连接超时，请检查网络.</string>
    <string name="add_yourself">不能添加自己为好友</string>
    <string name="already_your_friend">对方已在您的好友列表中</string>
    <string name="username_exist">用户名已存在</string>

    <!-- main_activity -->
    <string name="btn_tblog">微博</string>
    <string name="btn_friends">好友</string>
    <string name="btn_notice">消息(${count})</string>
    <string name="btn_settings">设置</string>

    <!-- friends_activity -->
    <string name="myfriends">我的好友</string>
    <string name="searchfriends">搜索好友</string>
    <string name="socialgraph">SocialGraph</string>
    <string name="search">搜索</string>
    <string name="friends_name">昵称</string>
    <string name="friends_realname">真实姓名</string>
    <string name="friends_address">地址</string>
    <string name="friends_phone">电话</string>
    <string name="friends_email">电子邮件</string>
    <string name="btn_addfriend">加为好友</string>
    <string name="btn_deletefriend">删除好友</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_yes">确定</string>
    <string name="alertdialog_title_success">成功</string>
    <string name="addfriend_success">好友邀请已成功发送</string>
    <string name="alertdialog_msg_deletefriend">确定删除该好友吗？</string>
    
    <!-- notice_activity -->
    <string name="notice_sender">发送者</string>
    <string name="notice_content">内容</string>
    <string name="notice_time">发送时间</string>
    <string name="alertdialog_title_access">接受邀请</string>
    <string name="btn_accept">接受</string>
    <string name="btn_reject">拒绝</string>
    <string name="notice_time_format">${year}年${month}月${date}日${hour}时${minute}分</string>

    <!-- register_activity -->
    <string name="register_reset">重置</string>
    <string name="check_username">检查用户名</string>
    <string name="register_address">Address:</string>
    <string name="register_username">*用户名：</string>
    <string name="register_passwd">*密码：</string>
    <string name="register_check_passwd">*重复密码：</string>
    <string name="register_email">*注册邮箱：</string>
    <string name="register">注册</string>
    <string name="register_name">真实姓名：</string>
    <string name="register_phone">手机号码：</string>
    <string name="register_success">注册成功</string>

    <!-- landing_activity -->
    <string name="login_username">用户名：</string>
    <string name="login_passwd">密码：</string>
    <!-- ccn_activity -->
    <string name="select_file">上传文件</string>
    <string name="delete_file">删除</string>
    <string name="back_file">BACK</string>

    <!-- file_activity -->
    <string name="filebrower_back">上一层</string>
    <string name="filebrower_close">关闭</string>
    <string name="makesure">确定上传：</string>
    
    <string name="waiting">稍等。。。</string>

    <!-- settings_activity -->
    <string name="settings_username">用户名：</string>
    <string name="settings_passwd">密码：</string>
    <string name="settings_check_passwd">重复密码：</string>
    <string name="settings_email">注册邮箱：</string>
    <string name="settings">Settings</string>
    <string name="settings_name">真实姓名：</string>
    <string name="settings_date">出生日期：</string>
    <string name="settings_sex">性别：</string>
    <string name="settings_boy">帅哥</string>
    <string name="settings_girl">美女</string>
    <string name="settings_qq">QQ号码：</string>
    <string name="settings_phone">手机号码：</string>
    <string name="settings_address">地址：</string>
    <string name="settings_selectdate">选择日期</string>
    <string name="settings_photo">Photo</string>
    <string name="settings_click_photo">Click To Choose Your Photo</string>
    <string name="settings_ok">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_failed">settings failed: old password is wrong</string>
    <string name="settings_success">settings success!</string>
    <string name="settings_oldpsw">旧密码</string>
    <string name="settings_newpsw">新密码</string>

</resources>